<resources>
    <string name="app_name">My Application</string>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Añadir Productos</string>
    <string name="menu_about">About us</string>
    <string name="menu_cesta">Cesta</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_location">Location</string>
</resources>