<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cesta"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/menu_cesta" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_baseline_people"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/contacto"
            android:icon="@drawable/ic_baseline_contacts"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_baseline_location"
            android:title="@string/menu_location" />
    </group>
</menu>